--- a/week-1/assignments/about.html
+++ b/week-1/assignments/about.html
@@ -18,23 +18,32 @@
     <ul>
         <li><a href="drinks.html">Drinks</a></li>
         <li><a href="pastries.html">Pastries</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
     </ul>
     </div>
 
     <div class="imgssss"><img src="Images/coffee_bar.jpeg" alt="Welcoming image of our Coffee Bar"></div>
 
-    <h1>Welcome to Sip & Spice Cafe</h1>
-    <div class="para">
-        <p>Welcome to Sip & Spice Cafe where all our items are made fresh everyday! Come on in to our peaceful environment and greet friendly staff and people alike. Our Cafe offers a wide variety of delightful menu items for you to dig in and enjoy! We also have a range of comfortable places for you to chat and enjoy a coffee alone or with friends!</p>
+    <h1>Opening/Closing Hours!</h1>
+
+    <div class="hours">
+        <li>Monday 9am - 5pm </li>
+        <li>Tuesday 9am - 5pm</li>
+        <li>Wednesday 9am - 5pm</li>
+        <li>Thursday 9am - 5pm</li>
+        <li>Friday 9am - 4pm</li>
+        <li>Saturday 10am - 3pm </li>
+        <li>Sunday - CLOSED </li>
+
     </div>
-    <div class="links">
+    
+    <div class="linksss">
             <li></li><a href="#">Facebook</a>
             <li></li><a href="#">X</a>
             <li></li><a href="#">Instagram</a>
             <li></li><a href="#">LinkedIn</a>      
     </div>
-    <div class="imagess">
+    <div class="imagesss">
         <img src="Images/Logo coffee.webp" alt="Coffee Shop Logo" width="50" height="50">
     </div>
 
